# study-portpolio-overall

./: ALGORITHMS-CS-ROADMAP.md  CLAUDE.md  EVALUATE.md  RECRUITMENT-GUIDE.md  ROADMAP-NEW.md  ROADMAP.md  diff  프로젝트_레벨_분석.md
.github/workflows/: ci.yml  monorepo-ci.yml
.notuse/: ALGORITHMS-CS-ROADMAP.md  ROADMAP.md
.notuse/ALGORITHMS-CS/: A4-maintenance-routine.md  A5-platinum-essentials.md  B2-networking.md
.notuse/TUTORIAL/: T0-dev-environment-setup.md  T01-js-ts-core.md  T04-db-redis-websocket.md  T06-react-vite-basics.md  T09-testing-accessibility.md  T10-cpp-basics.md  T11-cpp-raii-tcp.md  T14-node-api-ffmpeg.md
TUTORIAL/: README.md  T0-dev-environment-setup.md  T01-js-ts-core.md  T02-node-http-ffmpeg.md  T03-nest-bootstrap.md  T05-advanced-backend.md  T06-react-vite-basics.md  T07-react-query-forms.md  T08-stats-search-optimization.md  T09-testing-accessibility.md  T10-cpp-basics.md  T10-cpp-raii-tcp.md  T11-2-udp-netcode.md  T11-asio-websocket-gameloop.md  T12-asio-websocket-gameloop.md  T12-node-api-ffmpeg.md  T13-docker-deployment.md  T13-udp-netcode.md  T9.5-cpp-basics.md
TUTORIAL/ALGORITHMS-CS/: A0-setup-and-habit.md  A1-silver-fundamentals.md  A2-gold-mid-tier.md  A3-gold-advanced.md  B1-operating-systems.md  B3-database.md
arena/: README.md
arena/design/: mvp-1.0.md
arena/server/: CMakeLists.txt
arena/server/src/: CMakeLists.txt
arena/server/src/core/: config.cpp  game_loop.cpp
arena/server/src/game/: combat.cpp  projectile.cpp
arena/server/src/matchmaking/: match.cpp  match_notification_channel.cpp  match_request.cpp
arena/server/src/network/: metrics_http_server.cpp
arena/server/src/stats/: match_stats.cpp  player_profile_service.cpp
arena/the-shortest-distance/: 1.md  2.md  3.md  4.md
arena/tools/: test_client.py
back-end/spring/: README.md  build.gradle
backend/node.js/: .env.example  .env.test  .gitignore  Dockerfile  OVERVIEW.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/spring/: README.md  docker-compose.yml
design/gameserver-fundamentals/: ci.md  lab1.1.md  lab1.4.md
design/netcode-core/: 1.0-udp-authority-core.md  1.2-observability.md  1.3-match-room-split.md
e-commerce/: .gitignore  .spectral.yaml  OVERVIEW.md  README.md  pom.xml
e-commerce/.meta/: state.yml
e-commerce/design/: stage0-bootstrap.md
e-commerce/docs/: CI-CD-SETUP.md  DOMAIN_IMPLEMENTATION_TEMPLATE.md  STAGE1_IMPLEMENTATION.md  STAGE1_PROGRESS.md
e-commerce/scripts/: README.md  install-hooks.sh  pre-commit  security-scan.sh
framework/: OVERVIEW.md  README.md
framework/design/: 1.2-mini-framework.md  1.4.5-spring-bridge.md  ci.md
framework/docs/: learning-journal.md
framework/the-shortest-distance/: 1-overview.md  2-python-for-c-programmers.md  3-web-frameworks-basics.md  4-quick-start.md
game-server/: .gitignore  README.md  gameserver-overview.md
game-server/design/: bootstrap.md
game-server/gameserver-fundamentals/lab1.2-turn-combat/: CMakeLists.txt  player.h
game-server/gameserver-fundamentals/lab1.4-ws-pong/: CMakeLists.txt  metrics_client.cpp  pong_client.html  pong_server.h
game-server/netcode-core/: CMakeLists.txt
game-server/netcode-core/apps/loadgen/: CMakeLists.txt  bot.cpp  bot.h
game-server/netcode-core/apps/matcher/: CMakeLists.txt  main.cpp
game-server/netcode-core/apps/pong_udp/: main.cpp  pong_udp_server.cpp
game-server/netcode-core/core/: CMakeLists.txt  game_loop.cpp  player.cpp  player.h  world.cpp  world.h
game-server/netcode-core/match/: room_manager.cpp  room_manager.h
game-server/netcode-core/metrics/: prometheus.cpp  prometheus.h
game-server/netcode-core/net/: CMakeLists.txt
game-server/netcode-core/sync/: CMakeLists.txt  delta.cpp  prediction.h  reconciliation.cpp  reconciliation.h  snapshot.h  time_sync.h
game-server/the-shortest-distance/: 1.md  2.md  3.md  4.md  5.md  6.md  roadmap.md
gameserver-fundamentals/: CMakeLists.txt
gameserver-fundamentals/lab1.1-tcp-echo/: CMakeLists.txt  echo_server.h  socket.h
gameserver-fundamentals/lab1.2-turn-combat/: game_loop.h  game_server.cpp  game_state.h  player.h
gameserver-fundamentals/lab1.3-ws-chat/: CMakeLists.txt  main.cpp  test_client.html  websocket_server.h
gameserver-fundamentals/lab1.4-ws-pong/: main.cpp  pong_game.h  pong_server.h
history/: bootstrap.md
netcode-core/apps/: CMakeLists.txt
netcode-core/apps/loadgen/: CMakeLists.txt  main.cpp
netcode-core/apps/pong_udp/: CMakeLists.txt  pong_udp_server.h
netcode-core/core/: game_loop.h  physics.cpp  physics.h
netcode-core/match/: CMakeLists.txt  matchmaker.cpp  matchmaker.h
netcode-core/metrics/: CMakeLists.txt
netcode-core/net/: transport.h
netcode-core/net/udp/: CMakeLists.txt  udp_transport.cpp  udp_transport.h
netcode-core/proto/: mini.proto
netcode-core/sync/: CMakeLists.txt  delta.h  prediction.cpp  snapshot.cpp  snapshot.h  time_sync.cpp
ray-tracing/: OVERVIEW.md  README.md
ray-tracing/.meta/: state.yml
ray-tracing/design/: mvp-1.0-basic-game-server.md  mvp-1.1-combat-system.md  mvp-1.2-matchmaking.md  mvp-1.3-statistics-ranking.md
ray-tracing/server/: vcpkg.json
ray-tracing/the-shortest-distance/: mvp-1.0-quickstart.md  mvp-1.1-quickstart.md  mvp-1.2-quickstart.md  mvp-1.3-quickstart.md  roadmap.md
ray-tracing/tools/: README.md
react/: README.md
react/design/: ci.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md
react/frontend/: README.md  package-lock.json  package.json  vitest.config.ts
react/the-shortest-distance/: 1.md  2.md  3.md  4.md  roadmap.md
video-editor/: CLAUDE.md  README.md
video-editor/.meta/: state.yml
video-editor/backend/: package-lock.json  package.json
video-editor/design/: 0.0-bootstrap.md  1.0-basic-infrastructure.md  1.1-trim-split.md  1.2-subtitle-speed.md  1.3-websocket-persistence.md  2.0-native-addon-setup.md  2.3-performance-monitoring.md  3.0-production-deployment.md  ci.md
video-editor/docs/: DEMO-SCRIPT.md  DEMO-VIDEO-GUIDE.md  PHASE-2-COMPLETION.md  PROJECT-COMPLETION.md  architecture.md  performance-report.md
(+452 files in other folders)
